--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,13 @@
   "description": "The frontend of the worlds first peer-to-peer rental marketplace for telescopes",
   "main": "dist/bundle.js",
   "scripts": {
-    "start": "webpack serve --open --mode development",
-    "build": "webpack --config webpack.config.js --mode production",
+    "start": "webpack serve --open",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit1"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.5",
     "@babel/core": "^7.24.5",
-    "@babel/plugin-transform-runtime": "^7.24.3",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
@@ -25,10 +24,10 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "html-webpack-plugin": "^5.6.0",
+    "react-router-dom": "^6.23.1",
     "sass": "^1.77.0",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
-    "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
