Setup database migration files for a local mysql database. Created schema for the application! Next step is to integrate user authentication into the app.

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "quickscopes-client",
   "version": "1.0.0",
   "description": "The frontend of the worlds first peer-to-peer rental marketplace for telescopes",
+  "private": "true",
   "main": "dist/bundle.js",
   "scripts": {
     "start": "webpack serve --open",
