--- a/server/package.json
+++ b/server/package.json
@@ -2,18 +2,23 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Server for the P2P rental marketplace",
+  "private": "true",
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "make": "npx knex migrate:make",
+    "up": "npx knex migrate:up",
+    "down": "npx knex migrate:down"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.8",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.0",
@@ -21,8 +26,12 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "argon2": "^0.40.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
+    "mysql2": "^3.9.9"
   }
 }
